fixed cursor wrapping downwards

--- a/css/app.css
+++ b/css/app.css
@@ -88,6 +88,7 @@ a {
 
 .wrap {
   color: white;
+  display: inline-block;
 }
 
 .social {
